# ddd-rust-webgl

./: Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
.github/workflows/: wasm.yml
js/: consts.js  consts.ts  index.js  index.ts
src/: app.rs  client.rs  constants.rs  gl_setup.rs  lib.rs  state.rs  util.rs
src/core/: mod.rs
src/core/programs/: color_2d.rs  color_2d_gradient.rs  mod.rs
src/programs/: graph_3d.rs  mod.rs
src/shaders/fragment/: graph_3d.rs
src/shaders/vertex/: graph_3d.rs
static/: index.html
